changed links o the homepage

--- a/pages/templates/pages/home.html
+++ b/pages/templates/pages/home.html
@@ -12,7 +12,7 @@
         <p class="lead">We offer the best services to make your experience memorable.</p>
         <hr class="my-4 bg-light">
         <p>Explore our services and get in touch with us for more details.</p>
-        <a class="btn btn-primary btn-lg" href="{% url 'booking_list' %}" role="button">Book now</a>
+        <a class="btn btn-primary btn-lg" href="{% url 'book_service' %}" role="button">Book now</a>
     </div>
     
 
