--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.css">
+    <!-- favicon link -->
     <link rel="icon" type="image/x-icon" href="{% static 'favicon_io/favicon.ico' %}">
     
 </head>
