--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -53,7 +53,7 @@ body {
     display: inline-block;
     padding: 0 2rem;
     font-size: 2rem;
-    color: #79B341;
+    color: #c7c7c7;
 }
 
 @-webkit-keyframes ticker {
