started readme file

--- a/templates/base.html
+++ b/templates/base.html
@@ -87,9 +87,14 @@
     </main>
     
     <footer class="bg-light py-4 mt-4">
-        <div class="container">
-            <p class="text-center">&copy; 2024 Seeheimat</p>
-        </div>
+        <ul>
+            <li><a id="social-network" href="https://www.instagram.com/krauterhuttl_achensee/" target="_blank"
+                    rel="noopener">
+                    <i class="fa-brands fa-instagram" aria-hidden="true"></i>
+                    <span class="visually-hidden">Instagram</span>
+                </a></li>
+            <li>&copy; 2024 Seeheimat. All rights reserved.</li>
+        </ul>
     </footer>
 
     <!-- Bootstrap JS and dependencies -->
