--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -20,6 +20,51 @@ body {
 
 }
 
+/* footer */
+
+footer li {
+    list-style: none;
+    color: black;
+    padding: 2vh;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+
+#social-network {
+    list-style: none;
+    text-decoration: none;
+    color: black;
+    padding: 2vh;
+    width: 20px;
+    height: 20px;
+    margin: 2vh;
+    font-size: 150%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+
+
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+}
+
+
+/* home.html */
+
 .ticker-wrap {
     margin-top: 5vh;
     position: static;
