added tests for models, views and urls in booking

--- a/booking/templates/booking/book_confirmation.html
+++ b/booking/templates/booking/book_confirmation.html
@@ -13,13 +13,12 @@
         <div class="row justify-content-center">
             <div class="col-md-4 mt-5 mb-5 p-5 bg-darker rounded">
                 <div class="card-body">
-                    <div class="row">
+                    <div class="row text-center">
                         
                         <h2>Awaiting Confirmation</h2><br>
                         <hr>
-                        <p>Your booking will be confirmed soon, <a href="{% url 'booking_list' %}" class="booking-success-button">click</a></p><br>
-                        <p>Return home, <a href="{% url 'home' %}" class="booking-success-button">click</a><p><br>
-                        <p>We look forward to seeing you!</p>
+                        <p>Your booking will be confirmed soon, <a href="{% url 'booking_list' %}" class="btn btn-primary">My Bookings</a></p><br>
+                        <p class="text-secondary">We look forward to seeing you!</p>
                          
                     </div>            
                 </div>
