--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -31,6 +31,7 @@ footer li {
     text-align: center;
     display: flex;
     flex-direction: column;
+    left: 0;
 }
 
 #social-network {
@@ -49,8 +50,6 @@ footer li {
     flex-direction: column;
 }
 
-
-
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -62,6 +61,9 @@ footer li {
     border: 0;
 }
 
+footer > ul {
+    padding-left: 0;
+}
 
 /* home.html */
 
