--- a/templates/404.html
+++ b/templates/404.html
@@ -1,11 +1,12 @@
+{% extends 'base.html' %}
 {% load static %}
 
-{% extends 'base.html' %}
+{% block title %}404 - Page Not Found{% endblock %}
 
 {% block content %}
     <div class="container text-center">
         <h1>404 - Page Not Found</h1>
         <p>Sorry, the page you are looking for does not exist.</p>
-        <a href="{% url 'home' %}" class="btn btn-primary">Go Back Home</a>
+        <a href="{% url 'home' %}" class="btn btn-primary m-5">Go Back Home</a>
     </div>
 {% endblock %}
