--- a/templates/500.html
+++ b/templates/500.html
@@ -1,11 +1,12 @@
+{% extends 'base.html' %}
 {% load static %}
 
-{% extends 'base.html' %}
+{% block title %}500 - Internal Server Error{% endblock %}
 
 {% block content %}
     <div class="container text-center">
         <h1>500 - Internal Server Error</h1>
         <p>Sorry, the server encountered an error.</p>
-        <a href="{% url 'home' %}" class="btn btn-primary">Go Back Home</a>
+        <a href="{% url 'home' %}" class="btn btn-primary m-5">Go Back Home</a>
     </div>
 {% endblock %}
