--- a/booking/templates/booking/book_service.html
+++ b/booking/templates/booking/book_service.html
@@ -9,6 +9,7 @@
             <h1 class="text-center">Book a Service</h1><hr>
         </div>
     </div>
+</div>
 <div class="container">
     <div class="row justify-content-center mt-3">
         <div class="col-md-6">
@@ -25,13 +26,12 @@
                         <form method="POST" enctype="multipart/form-data">
                             {% csrf_token %}
                             {{ booking_form|crispy }}
-                            <button class="btn btn-success" type="submit">Submit</button>
+                            <button class="btn btn-primary" type="submit">Submit</button>
                         </form>
                         {% else %}
                         <h3>Login Required</h3>
                         <p>Please login for booking a service</p>
-                        <button class="btn btn-success" type="submit"><a href="{% url 'account_login' %}">Go to Login
-                                Page</a></button>
+                        <a class="btn btn-primary" href="{% url 'account_login' %}">Go to Login Page</a>
                         {% endif %}
                         
                         <!-- Form Errors from stack overflow -->
