--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -20,10 +20,10 @@
     <div class="row">
         <div class="col card mb-4  mt-3 left  top">
             <div class="card-body">
-                <p class="card-text">
-                    <h2>{{ post.author }}</h2>
+                <p class="card-text"></p>
+                    <h2>{{ post.title }}</h2>
                     {{ post.content | safe }}
-                </p>
+                
             </div>
         </div>
     </div>
