--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -10,7 +10,7 @@
                 <p class="post-subtitle">{{ post.author }} | {{ post.created_on }}</p>
             </div>
             <div class="d-none d-md-block col-md-6 masthead-image">
-                <img src="{% static 'images/default.png' %}" class="scale" alt="placeholder">
+                <img src="{% static 'images/default.webp' %}" class="scale" alt="placeholder">
             </div>
         </div>
     </div>
