--- a/pages/templates/pages/home.html
+++ b/pages/templates/pages/home.html
@@ -68,7 +68,7 @@
     <div class="row">
         <div class="col-md-4">
             <div class="card mb-4 shadow-sm">
-                <img src="{% static 'images/default.png' %}" class="card-img-top" alt="Placeholder">
+                <img src="{% static 'images/default.webp' %}" class="card-img-top" alt="Placeholder">
                 <div class="card-body">
                     <h5 class="card-title">John Doe</h5>
                     <p class="card-text">Lorem Ipsum</p>
@@ -77,7 +77,7 @@
         </div>
         <div class="col-md-4">
             <div class="card mb-4 shadow-sm">
-                <img src="{% static 'images/default.png' %}" class="card-img-top" alt="Placeholder">
+                <img src="{% static 'images/default.webp' %}" class="card-img-top" alt="Placeholder">
                 <div class="card-body">
                     <h5 class="card-title">Jane Doe</h5>
                     <p class="card-text">Lorem Ipsum</p>
