--- a/booking/templates/booking/book_cancel.html
+++ b/booking/templates/booking/book_cancel.html
@@ -5,7 +5,7 @@
 <div class="container-fluid mt-5">
     <div class="row d-flex justify-content-center">
         <div class="col-sm-8 mt-5 mb-5">
-            <h1 class="text-center">Need to Cancel?</h1><hr>
+            <h1 class="text-center">Cancel Booking?</h1><hr>
         </div>
     </div>
 <section>
