--- a/booking/templates/booking/book_edit.html
+++ b/booking/templates/booking/book_edit.html
@@ -6,7 +6,7 @@
 <div class="container-fluid mt-5">
     <div class="row d-flex justify-content-center">
         <div class="col-sm-8 mt-5 mb-5">
-            <h1 class="text-center">Change of Plans?</h1><hr>
+            <h1 class="text-center">Edit Booking</h1><hr>
         </div>
     </div>
 <div class="container">
