made some comments on the code

--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
+<!-- NOTE: The Blog was made with the code of "I think therefore I blog" - Project -->
+
 <div class="masthead">
     <div class="container">
         <div class="row g-0">
