--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% block content %}
 
+<!-- NOTE: The Blog was made with the code of "I think therefore I blog" - Project -->
+
 <div class="container-fluid">
     <div class="row">
 
