--- a/booking/templates/booking/book_service.html
+++ b/booking/templates/booking/book_service.html
@@ -35,7 +35,7 @@
                 </form>
 
                 <!-- Form Errors -->
-                {% if booking_form.errors %}
+                <!-- {% if booking_form.errors %}
                     {% for field in booking_form %}
                         {% for error in field.errors %}
                             <div class="alert alert-danger mt-3" role="alert">
@@ -48,7 +48,7 @@
                             <strong>{{ error|escape }}</strong>
                         </div>
                     {% endfor %}
-                {% endif %}
+                {% endif %} -->
             {% endif %}
         </div>
     </div>
