--- a/booking/templates/booking/book_list.html
+++ b/booking/templates/booking/book_list.html
@@ -11,7 +11,7 @@
     </div>
     {% else %}
     <h1 class="text-center mb-4">My Bookings</h1>
-
+    <!-- create the table -->
     <div class="table-responsive">
         <table class="table table-striped table-hover">
             <thead class="thead-light">
